src/main/java/com/example/citronix/web/errors/RecolteUndefinedException.java
package com.example.citronix.web.errors;

public class RecolteUndefinedException extends RuntimeException {
    public RecolteUndefinedException(String message) {
        super(message);
    }

}
